--- a/.github/workflows/qqread.yml
+++ b/.github/workflows/qqread.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-
 
-name: qqreads
+name: qqread
 
 on:
   workflow_dispatch:
@@ -10,7 +10,7 @@ on:
   watch:
     types: started
   repository_dispatch:
-    types: qqreads
+    types: qqread
 jobs:
   build:
 
@@ -39,7 +39,7 @@ jobs:
           npm install tough-cookie
       - name: '运行 【QQ阅读】'
         run: |
-          node qqreads.js
+          node qqread.js
         env:
-             QQREADS_COOKIE:   ${{ secrets.QQREADS_COOKIE }}
+             QQREAD_COOKIE:   ${{ secrets.QQREAD_COOKIE }}
         
