--- a/.github/workflows/qqread.yml
+++ b/.github/workflows/qqread.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: qqread1
+name: qqread
 
 on:
   workflow_dispatch:
@@ -10,7 +10,7 @@ on:
   watch:
     types: started
   repository_dispatch:
-    types: qqread1
+    types: qqread
 jobs:
   build:
 
@@ -35,7 +35,12 @@ jobs:
       - name: npm install
         run: |
           npm install
+          npm install got
+          npm install tough-cookie            
       - name: '运行 【QQ阅读】'
         run: |
-          node qqread1.js
+          node qqread.js
+          env:
+             cookie_qqyd: ${{ secrets.cookie_qqyd }}
+          
         
