--- a/.github/workflows/qqread.yml
+++ b/.github/workflows/qqread.yml
@@ -39,6 +39,7 @@ jobs:
       - name: '运行 【QQ阅读】'
         run: |
           node qqread1.js
-
+          env:
+             COOKIE_QQYD: ${{ secrets.COOKIE_QQYD }}
           
         
