--- a/.github/workflows/qqyd.yml
+++ b/.github/workflows/qqyd.yml
@@ -29,12 +29,4 @@ jobs:
           npm install got download
       - name: ' 运行 【企鹅阅读】'
         run: |
-          node qqyd.js
-        env:
-          PUSH_KEY: ${{ secrets.PUSH_KEY }}
-          BARK_PUSH: ${{ secrets.BARK_PUSH }}
-          BARK_SOUND: ${{ secrets.BARK_SOUND }}
-          TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
-          TG_USER_ID: ${{ secrets.TG_USER_ID }}
-          DD_BOT_TOKEN: ${{ secrets.DD_BOT_TOKEN }}
-          DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
+          node qqread.js
