--- a/.github/workflows/jd_dreamfactory.yml
+++ b/.github/workflows/jd_dreamfactory.yml
@@ -6,7 +6,7 @@ name: 惊喜工厂
 on:
   workflow_dispatch:
   schedule:
-    - cron: '51 * * * *'
+    - cron: '*/10 * * * *'
   watch:
     types: [started]
   repository_dispatch:
@@ -39,7 +39,7 @@ jobs:
         run: |
           node jd_dreamFactory.js
         env:
-          JD_COOKIE: ${{ secrets.JD_COOKIE }}
+          JD_COOKIE: ${{ secrets.JD_COOKIE1 }}
           JD_DEBUG: ${{ secrets.JD_DEBUG }}
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
           BARK_PUSH: ${{ secrets.BARK_PUSH }}
