--- a/.github/workflows/jd_dreamfactory.yml
+++ b/.github/workflows/jd_dreamfactory.yml
@@ -6,7 +6,7 @@ name: 惊喜工厂
 on:
   workflow_dispatch:
   schedule:
-    - cron: '*/10 * * * *'
+    - cron: '*/10 0-23 * * *'
   watch:
     types: [started]
   repository_dispatch:
