--- a/.github/workflows/jd_ms_redrain.yml
+++ b/.github/workflows/jd_ms_redrain.yml
@@ -1,16 +1,16 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: jd_woHome1
+name: jd_ms_redrain
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '33 */3 * * *'
-  # watch:
-  #   types: started
+    - cron: '7 10 * * *'
+  watch:
+    types: started
   repository_dispatch:
-    types: jd_woHome1
+    types: jd_ms_redrain
 jobs:
   build:
 
@@ -18,9 +18,9 @@ jobs:
     if: github.event.repository.owner.id == github.event.sender.id
     steps:
       - name: Checkout
-        run: |
-          git clone https://github.com/yangtingxiao/QuantumultX.git  ~/scripts/jd/
-
+        uses: actions/checkout@v2
+        with:
+          repository: sunmooo/jd_scripts
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
@@ -32,9 +32,12 @@ jobs:
         with:
           path: node_modules
           key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('package-lock.json') }} # 使用 package-lock.json 的 Hash 作为缓存的 key。也可以使用 package.json 代替
-      - name: '运行 【东东小窝】'
+      - name: npm install
         run: |
-          node scripts/jd/jd_woHome.js
+          npm install
+      - name: '运行 【秒杀红包雨】'
+        run: |
+          node jd_ms_redrain.js
         env:
           JD_COOKIE: ${{ secrets.JD_COOKIE }}
           JD_DEBUG: ${{ secrets.JD_DEBUG }}
