--- a/.github/workflows/jd_apple_live.yml
+++ b/.github/workflows/jd_apple_live.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: 苹果抽奖机
+name: 苹果抽奖机2020-12-14
 
 on:
   workflow_dispatch:
