--- a/.github/workflows/jd_jdzz.js.yml
+++ b/.github/workflows/jd_jdzz.js.yml
@@ -6,42 +6,38 @@ name: 赚赚
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 16 * * *'
+     - cron: '*/11 * * * *'
   watch:
     types: started
-  repository_dispatch:
-    types: jd_jdzz
+
 jobs:
   build:
-
     runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
+    env:
+          JD_COOKIE: ${{ secrets.JD_COOKIE }}
+          JD_DEBUG: ${{ secrets.JD_DEBUG }}
+        
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          repository: sunmooo/JD1
-      - name: Use Node.js ${{ matrix.node-version }}
+        run: |
+          git clone https://github.com/sunmooo/JD1.git ~/JD1
+      - name: Use Node.js 12.x
         uses: actions/setup-node@v1
         with:
-          node-version: ${{ matrix.node-version }}
-      - name: Cache node_modules
-        uses: actions/cache@v2 # 使用 GitHub 官方的缓存 Action。
-        env:
-          cache-name: cache-node-modules
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('package-lock.json') }} # 使用 package-lock.json 的 Hash 作为缓存的 key。也可以使用 package.json 代替
+          node-version: 12.x
       - name: npm install
+        if: env.JD_COOKIE
         run: |
+          cd ~/JD1
           npm install
-      - name: '运行 【京东赚赚】'
+      - name: '运行 【赚赚】'
+        if: env.JD_COOKIE
         run: |
           cd ~/JD1
           node jd_jdzz.js
         env:
-          JD_COOKIE: ${{ secrets.JD_COOKIE }}
-          JD_DEBUG: ${{ secrets.JD_DEBUG }}
+          
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
           BARK_PUSH: ${{ secrets.BARK_PUSH }}
           TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
@@ -49,4 +45,5 @@ jobs:
           BARK_SOUND: ${{ secrets.BARK_SOUND }}
           DD_BOT_TOKEN: ${{ secrets.DD_BOT_TOKEN }}
           DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
-          IGOT_PUSH_KEY: ${{ secrets.IGOT_PUSH_KEY }}
+
+    
