--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "Sunert",
+  "name": "JD1",
   "version": "1.0.0",
   "description": "",
-  "main": "jingxi.js",
+  "main": "jdzz.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Sunert/Scripts.git"
+    "url": "https://github.com/sunmooo/JD1.git"
   },
   "keywords": ["中青看点,腾讯新闻等等"],
-  "author": "Sunert",
+  "author": "sunmooo",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Sunert/Scripts/issues"
+    "url": "https://github.com/sunmooo/JD1/issues"
   },
-  "homepage": "https://github.com/Sunert/Scripts#readme",
+  "homepage": "https://github.com/sunmooo/JD1#readme",
   "dependencies": {
     "crypto-js": "^4.0.0",
     "got": "^11.7.0",
