--- a/.github/workflows/jdzzz.yml
+++ b/.github/workflows/jdzzz.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          repository: sunmooo/jd_scripts
+          repository: sunmooo/JD
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
