--- a/.github/workflows/jdzz2.yml
+++ b/.github/workflows/jdzz2.yml
@@ -19,7 +19,7 @@ jobs:
     steps:
       - name: Checkout
         run: |
-          git clone https://gitee.com/sunxiaoxx/JD.git ~/scripts
+          git clone https://gitee.com/sunxiaoxx/JD.git ~/JD
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
@@ -33,7 +33,7 @@ jobs:
           key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('package-lock.json') }} # 使用 package-lock.json 的 Hash 作为缓存的 key。也可以使用 package.json 代替
       - name: '运行 【赚赚2】'
         run: | 
-          cd ~/scripts
+          cd ~/JD
           npm install
           node jd_jdzz.js
         env:
