--- a/.github/workflows/jd_syj.yml
+++ b/.github/workflows/jd_syj.yml
@@ -1,12 +1,12 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name:  jd_syj
+name:  jd_syj赚金豆
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 2 * * *'
+    - cron: '0 2,15 * * *'
   watch:
     types: started
   repository_dispatch:
