--- a/.github/workflows/jd_speed1.yml
+++ b/.github/workflows/jd_speed1.yml
@@ -1,16 +1,17 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: jd_speed1
+name: jd_speed 天天加速
 
 on:
+  push:
   workflow_dispatch:
   schedule:
-    - cron: '33 */3 * * *'
+    - cron: '33 */2 * * *'
   # watch:
   #   types: started
   repository_dispatch:
-    types: speed1
+    types: speed
 jobs:
   build:
 
@@ -19,7 +20,7 @@ jobs:
     steps:
       - name: Checkout
         run: |
-          git clone https://gitee.com/lxk0301/jd_scripts.git ~/jd_scripts
+          git clone -b master https://gitee.com/lxk0301/jd_scripts.git ~/scripts
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
@@ -33,7 +34,7 @@ jobs:
           key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('package-lock.json') }} # 使用 package-lock.json 的 Hash 作为缓存的 key。也可以使用 package.json 代替
       - name: '运行 【天天加速】'
         run: |
-          cd  ~/jd_scripts
+          cd  ~/scripts
           npm install
           node jd_speed.js
         env:
